# Dungeon

./: README.md  game.py  lifecycle.py  pyproject.toml  run_game.py  tp.sh
lib/: camera.py  gameobj.py  io.py  phyobj.py  physics.py  prompt.py  render.py  scene.py  viewport.py
src/: lexem.py  physics.py  process.py  ui.py  utilobjs.py  vec.py  viewport.py
src/res/: obstacle.dungeon  obstacle.objtex  obstacle.phyobj  obstacle_mesh.dungeon  player.phyobj
tests/res/: box.texture
wisayoengine/: box.py  camera.py  component_manager.py  engine.py  graphics.py  lexem.py  lexemobj.py  physics.py  prompt.py  resource_loader.py  sprite.py  tex.py  ui.py  viewport.py
wisayoengine/core/: __init__.py  basic_components.py  component_manager.py  entity.py  position_component.py  rotation.py  transform.py  vector.py
wisayoengine/graphics/: camera.py  draw_pack.py  render_system.py  renderer.py  texture.py  texture_component.py
wisayoengine/io/: input_api.py  input_system.py  resource_loader.py  texture_parser.py
wisayoengine/physics/: physics.py  physics_component.py
